fix: z-index of character modal sticky elements

--- a/web-components/src/direflow-components/anime-op-app/components/details/CharacterDescription.less
+++ b/web-components/src/direflow-components/anime-op-app/components/details/CharacterDescription.less
@@ -6,6 +6,7 @@
     justify-content: flex-start;
     position: sticky;
     top: 3.875rem;
+    z-index: 11;
     padding: 0.25rem 0;
     background: @gray-base-lighter;
 
