--- a/web-components/src/direflow-components/anime-op-app/components/details/CharacterModal.less
+++ b/web-components/src/direflow-components/anime-op-app/components/details/CharacterModal.less
@@ -31,6 +31,7 @@
     .character-modal-header {
       position: sticky;
       top: 0;
+      z-index: 11;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
